Release 24w06a (snapshot)