@@ -1,52 +1,343 @@
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Lists;
+import com.google.common.collect.Maps;
+import com.mojang.logging.LogUtils;
+import it.unimi.dsi.fastutil.objects.Object2ObjectArrayMap;
+import java.io.FilterInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.TreeMap;
 import java.util.function.Predicate;
+import java.util.function.Supplier;
 import java.util.stream.Stream;
+import javax.annotation.Nullable;
+import org.slf4j.Logger;
 
-public interface asf extends asi {
-   Set<String> a();
+public class asf implements aso {
+   static final Logger c = LogUtils.getLogger();
+   protected final List<asf.d> a = Lists.newArrayList();
+   private final arc d;
+   private final String e;
 
-   List<asd> a(ajc var1);
+   public asf(arc $$0, String $$1) {
+      this.d = $$0;
+      this.e = $$1;
+   }
 
-   Map<ajc, asd> b(String var1, Predicate<ajc> var2);
+   public void a(ara $$0) {
+      this.a($$0.b(), $$0, null);
+   }
 
-   Map<ajc, List<asd>> c(String var1, Predicate<ajc> var2);
+   public void a(ara $$0, Predicate<ajh> $$1) {
+      this.a($$0.b(), $$0, $$1);
+   }
 
-   Stream<aqt> b();
+   public void a(String $$0, Predicate<ajh> $$1) {
+      this.a($$0, null, $$1);
+   }
 
-   public static enum a implements asf {
-      a;
+   private void a(String $$0, @Nullable ara $$1, @Nullable Predicate<ajh> $$2) {
+      this.a.add(new asf.d($$0, $$1, $$2));
+   }
 
-      @Override
-      public Set<String> a() {
-         return Set.of();
+   @Override
+   public Set<String> a() {
+      return ImmutableSet.of(this.e);
+   }
+
+   @Override
+   public Optional<asm> getResource(ajh $$0) {
+      for (int $$1 = this.a.size() - 1; $$1 >= 0; $$1--) {
+         asf.d $$2 = this.a.get($$1);
+         ara $$3 = $$2.b;
+         if ($$3 != null) {
+            asg<InputStream> $$4 = $$3.a(this.d, $$0);
+            if ($$4 != null) {
+               asg<asq> $$5 = this.a($$0, $$1);
+               return Optional.of(a($$3, $$0, $$4, $$5));
+            }
+         }
+
+         if ($$2.a($$0)) {
+            c.warn("Resource {} not found, but was filtered by pack {}", $$0, $$2.a);
+            return Optional.empty();
+         }
+      }
+
+      return Optional.empty();
+   }
+
+   private static asm a(ara $$0, ajh $$1, asg<InputStream> $$2, asg<asq> $$3) {
+      return new asm($$0, a($$1, $$0, $$2), $$3);
+   }
+
+   private static asg<InputStream> a(ajh $$0, ara $$1, asg<InputStream> $$2) {
+      return c.isDebugEnabled() ? () -> new asf.c($$2.get(), $$0, $$1.b()) : $$2;
+   }
+
+   @Override
+   public List<asm> a(ajh $$0) {
+      ajh $$1 = d($$0);
+      List<asm> $$2 = new ArrayList<>();
+      boolean $$3 = false;
+      String $$4 = null;
+
+      for (int $$5 = this.a.size() - 1; $$5 >= 0; $$5--) {
+         asf.d $$6 = this.a.get($$5);
+         ara $$7 = $$6.b;
+         if ($$7 != null) {
+            asg<InputStream> $$8 = $$7.a(this.d, $$0);
+            if ($$8 != null) {
+               asg<asq> $$9;
+               if ($$3) {
+                  $$9 = asq.b;
+               } else {
+                  $$9 = () -> {
+                     asg<InputStream> $$2x = $$7.a(this.d, $$1);
+                     return $$2x != null ? b($$2x) : asq.a;
+                  };
+               }
+
+               $$2.add(new asm($$7, $$8, $$9));
+            }
+         }
+
+         if ($$6.a($$0)) {
+            $$4 = $$6.a;
+            break;
+         }
+
+         if ($$6.a($$1)) {
+            $$3 = true;
+         }
+      }
+
+      if ($$2.isEmpty() && $$4 != null) {
+         c.warn("Resource {} not found, but was filtered by pack {}", $$0, $$4);
+      }
+
+      return Lists.reverse($$2);
+   }
+
+   private static boolean b(ajh $$0) {
+      return $$0.a().endsWith(".mcmeta");
+   }
+
+   private static ajh c(ajh $$0) {
+      String $$1 = $$0.a().substring(0, $$0.a().length() - ".mcmeta".length());
+      return $$0.c($$1);
+   }
+
+   static ajh d(ajh $$0) {
+      return $$0.c($$0.a() + ".mcmeta");
+   }
+
+   @Override
+   public Map<ajh, asm> b(String $$0, Predicate<ajh> $$1) {
+      record a(ara a, asg<InputStream> b, int c) {
+      }
+
+      Map<ajh, a> $$2 = new HashMap<>();
+      Map<ajh, a> $$3 = new HashMap<>();
+      int $$4 = this.a.size();
+
+      for (int $$5 = 0; $$5 < $$4; $$5++) {
+         asf.d $$6 = this.a.get($$5);
+         $$6.a($$2.keySet());
+         $$6.a($$3.keySet());
+         ara $$7 = $$6.b;
+         if ($$7 != null) {
+            int $$8 = $$5;
+            $$7.a(this.d, this.e, $$0, ($$5x, $$6x) -> {
+               if (b($$5x)) {
+                  if ($$1.test(c($$5x))) {
+                     $$3.put($$5x, new a($$7, $$6x, $$8));
+                  }
+               } else if ($$1.test($$5x)) {
+                  $$2.put($$5x, new a($$7, $$6x, $$8));
+               }
+            });
+         }
+      }
+
+      Map<ajh, asm> $$9 = Maps.newTreeMap();
+      $$2.forEach(($$2x, $$3x) -> {
+         ajh $$4x = d($$2x);
+         a $$5x = $$3.get($$4x);
+         asg<asq> $$6x;
+         if ($$5x != null && $$5x.c >= $$3x.c) {
+            $$6x = a($$5x.b);
+         } else {
+            $$6x = asq.b;
+         }
+
+         $$9.put($$2x, a($$3x.a, $$2x, $$3x.b, $$6x));
+      });
+      return $$9;
+   }
+
+   private asg<asq> a(ajh $$0, int $$1) {
+      return () -> {
+         ajh $$2 = d($$0);
+
+         for (int $$3 = this.a.size() - 1; $$3 >= $$1; $$3--) {
+            asf.d $$4 = this.a.get($$3);
+            ara $$5 = $$4.b;
+            if ($$5 != null) {
+               asg<InputStream> $$6 = $$5.a(this.d, $$2);
+               if ($$6 != null) {
+                  return b($$6);
+               }
+            }
+
+            if ($$4.a($$2)) {
+               break;
+            }
+         }
+
+         return asq.a;
+      };
+   }
+
+   private static asg<asq> a(asg<InputStream> $$0) {
+      return () -> b($$0);
+   }
+
+   private static asq b(asg<InputStream> $$0) throws IOException {
+      asq var2;
+      try (InputStream $$1 = $$0.get()) {
+         var2 = asq.a($$1);
+      }
+
+      return var2;
+   }
+
+   private static void a(asf.d $$0, Map<ajh, asf.b> $$1) {
+      for (asf.b $$2 : $$1.values()) {
+         if ($$0.a($$2.a)) {
+            $$2.c.clear();
+         } else if ($$0.a($$2.b())) {
+            $$2.d.clear();
+         }
+      }
+   }
+
+   private void a(asf.d $$0, String $$1, Predicate<ajh> $$2, Map<ajh, asf.b> $$3) {
+      ara $$4 = $$0.b;
+      if ($$4 != null) {
+         $$4.a(this.d, this.e, $$1, ($$3x, $$4x) -> {
+            if (b($$3x)) {
+               ajh $$5 = c($$3x);
+               if (!$$2.test($$5)) {
+                  return;
+               }
+
+               $$3.computeIfAbsent($$5, asf.b::new).d.put($$4, $$4x);
+            } else {
+               if (!$$2.test($$3x)) {
+                  return;
+               }
+
+               $$3.computeIfAbsent($$3x, asf.b::new).c.add(new asf.e($$4, $$4x));
+            }
+         });
+      }
+   }
+
+   @Override
+   public Map<ajh, List<asm>> c(String $$0, Predicate<ajh> $$1) {
+      Map<ajh, asf.b> $$2 = Maps.newHashMap();
+
+      for (asf.d $$3 : this.a) {
+         a($$3, $$2);
+         this.a($$3, $$0, $$1, $$2);
+      }
+
+      TreeMap<ajh, List<asm>> $$4 = Maps.newTreeMap();
+
+      for (asf.b $$5 : $$2.values()) {
+         if (!$$5.c.isEmpty()) {
+            List<asm> $$6 = new ArrayList<>();
+
+            for (asf.e $$7 : $$5.c) {
+               ara $$8 = $$7.a;
+               asg<InputStream> $$9 = $$5.d.get($$8);
+               asg<asq> $$10 = $$9 != null ? a($$9) : asq.b;
+               $$6.add(a($$8, $$5.a, $$7.b, $$10));
+            }
+
+            $$4.put($$5.a, $$6);
+         }
+      }
+
+      return $$4;
+   }
+
+   @Override
+   public Stream<ara> b() {
+      return this.a.stream().map($$0 -> $$0.b).filter(Objects::nonNull);
+   }
+
+   static record b(ajh a, ajh b, List<asf.e> c, Map<ara, asg<InputStream>> d) {
+
+      b(ajh $$0) {
+         this($$0, asf.d($$0), new ArrayList<>(), new Object2ObjectArrayMap());
+      }
+   }
+
+   static class c extends FilterInputStream {
+      private final Supplier<String> a;
+      private boolean b;
+
+      public c(InputStream $$0, ajh $$1, String $$2) {
+         super($$0);
+         Exception $$3 = new Exception("Stacktrace");
+         this.a = () -> {
+            StringWriter $$3x = new StringWriter();
+            $$3.printStackTrace(new PrintWriter($$3x));
+            return "Leaked resource: '" + $$1 + "' loaded from pack: '" + $$2 + "'\n" + $$3x;
+         };
       }
 
       @Override
-      public Optional<asd> getResource(ajc $$0) {
-         return Optional.empty();
+      public void close() throws IOException {
+         super.close();
+         this.b = true;
       }
 
       @Override
-      public List<asd> a(ajc $$0) {
-         return List.of();
+      protected void finalize() throws Throwable {
+         if (!this.b) {
+            asf.c.warn("{}", this.a.get());
+         }
+
+         super.finalize();
+      }
+   }
+
+   static record d(String a, @Nullable ara b, @Nullable Predicate<ajh> c) {
+
+      public void a(Collection<ajh> $$0) {
+         if (this.c != null) {
+            $$0.removeIf(this.c);
+         }
       }
 
-      @Override
-      public Map<ajc, asd> b(String $$0, Predicate<ajc> $$1) {
-         return Map.of();
+      public boolean a(ajh $$0) {
+         return this.c != null && this.c.test($$0);
       }
+   }
 
-      @Override
-      public Map<ajc, List<asd>> c(String $$0, Predicate<ajc> $$1) {
-         return Map.of();
-      }
-
-      @Override
-      public Stream<aqt> b() {
-         return Stream.of();
-      }
+   static record e(ara a, asg<InputStream> b) {
    }
 }
