@@ -1,47 +1,271 @@
-import java.util.List;
-import java.util.Optional;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
-public interface pu {
-   static void a(pj<ecm> $$0) {
-      im<ecg> $$1 = $$0.a(ki.aE);
-      im<cxd> $$2 = $$0.a(ki.au);
-      il.c<ecm> $$3 = $$0.a(
-         ebz.a,
-         new ecm(
-            List.of(ecm.a($$1.b(eca.t)), ecm.a($$1.b(eca.u)), ecm.a($$1.b(eca.v)), ecm.a($$1.b(eca.w)), ecm.a($$1.b(eca.x))), new edb(34, 8, edc.a, 10387312)
-         )
-      );
-      $$0.a(ebz.b, new ecm($$1.b(eca.f), new edb(32, 8, edc.a, 14357617)));
-      $$0.a(ebz.c, new ecm($$1.b(eca.g), new edb(32, 8, edc.a, 14357618)));
-      $$0.a(ebz.d, new ecm($$1.b(eca.e), new edb(32, 8, edc.a, 14357619)));
-      $$0.a(ebz.e, new ecm($$1.b(eca.j), new edb(32, 8, edc.a, 14357620)));
-      $$0.a(ebz.f, new ecm($$1.b(eca.a), new edb(jf.g, edd.c.b, 0.2F, 165745296, Optional.of(new edd.a($$3, 10)), 32, 8, edc.a)));
-      $$0.a(ebz.q, new ecm($$1.b(eca.F), new edb(24, 8, edc.a, 20083232)));
-      $$0.a(ebz.g, new ecm($$1.b(eca.l), new edb(32, 5, edc.b, 10387313)));
-      $$0.a(ebz.h, new ecm($$1.b(eca.d), new edb(80, 20, edc.b, 10387319)));
-      $$0.a(ebz.i, new ecm($$1.b(eca.r), new edb(new jf(9, 0, 9), edd.c.c, 0.01F, 0, Optional.empty(), 1, 0, edc.a)));
-      $$0.a(ebz.j, new ecm(List.of(ecm.a($$1.b(eca.b)), ecm.a($$1.b(eca.c))), new edb(jf.g, edd.c.d, 0.004F, 0, Optional.empty(), 1, 0, edc.a)));
+public class pu {
+   public static final ajg<eel> a = ps.a("village/savanna/town_centers");
+   private static final ajg<eel> b = ps.a("village/savanna/terminators");
+   private static final ajg<eel> c = ps.a("village/savanna/zombie/terminators");
+
+   public static void a(pl<eel> $$0) {
+      im<ecg> $$1 = $$0.a(kj.aD);
+      il<ecg> $$2 = $$1.b(ri.g);
+      il<ecg> $$3 = $$1.b(ri.a);
+      il<ecg> $$4 = $$1.b(ri.b);
+      im<eha> $$5 = $$0.a(kj.aF);
+      il<eha> $$6 = $$5.b(pt.b);
+      il<eha> $$7 = $$5.b(pt.j);
+      il<eha> $$8 = $$5.b(pt.m);
+      im<eel> $$9 = $$0.a(kj.aH);
+      il<eel> $$10 = $$9.b(ps.a);
+      il<eel> $$11 = $$9.b(b);
+      il<eel> $$12 = $$9.b(c);
       $$0.a(
-         ebz.k,
-         new ecm(
-            List.of(
-               ecm.a($$1.b(eca.y)),
-               ecm.a($$1.b(eca.z)),
-               ecm.a($$1.b(eca.A)),
-               ecm.a($$1.b(eca.B)),
-               ecm.a($$1.b(eca.C)),
-               ecm.a($$1.b(eca.D)),
-               ecm.a($$1.b(eca.E))
+         a,
+         new eel(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eej.a("village/savanna/town_centers/savanna_meeting_point_1"), 100),
+               Pair.of(eej.a("village/savanna/town_centers/savanna_meeting_point_2"), 50),
+               Pair.of(eej.a("village/savanna/town_centers/savanna_meeting_point_3"), 150),
+               Pair.of(eej.a("village/savanna/town_centers/savanna_meeting_point_4"), 150),
+               Pair.of(eej.a("village/savanna/zombie/town_centers/savanna_meeting_point_1", $$6), 2),
+               Pair.of(eej.a("village/savanna/zombie/town_centers/savanna_meeting_point_2", $$6), 1),
+               Pair.of(eej.a("village/savanna/zombie/town_centers/savanna_meeting_point_3", $$6), 3),
+               Pair.of(eej.a("village/savanna/zombie/town_centers/savanna_meeting_point_4", $$6), 3)
             ),
-            new edb(40, 15, edc.a, 34222645)
+            eel.a.b
          )
       );
-      $$0.a(ebz.l, new ecm(List.of(ecm.a($$1.b(eca.h)), ecm.a($$1.b(eca.i))), new edb(24, 4, edc.a, 165745295)));
-      $$0.a(ebz.m, new ecm(List.of(ecm.a($$1.b(eca.m)), ecm.a($$1.b(eca.n))), new edb(20, 8, edc.a, 14357621)));
-      $$0.a(ebz.n, new ecm(List.of(ecm.a($$1.b(eca.o), 2), ecm.a($$1.b(eca.s), 3)), new edb(27, 4, edc.a, 30084232)));
-      $$0.a(ebz.o, new ecm($$1.b(eca.p), new edb(2, 1, edc.a, 14357921)));
-      $$0.a(ebz.p, new ecm($$1.b(eca.q), new edb(20, 11, edc.b, 10387313)));
-      $$0.a(ebz.r, new ecm($$1.b(eca.k), new eda(32, 3, 128, $$2.b(aud.o))));
-      $$0.a(ebz.s, new ecm($$1.b(eca.G), new edb(34, 8, edc.a, 83469867)));
+      ps.a(
+         $$0,
+         "village/savanna/streets",
+         new eel(
+            $$11,
+            ImmutableList.of(
+               Pair.of(eej.a("village/savanna/streets/corner_01", $$7), 2),
+               Pair.of(eej.a("village/savanna/streets/corner_03", $$7), 2),
+               Pair.of(eej.a("village/savanna/streets/straight_02", $$7), 4),
+               Pair.of(eej.a("village/savanna/streets/straight_04", $$7), 7),
+               Pair.of(eej.a("village/savanna/streets/straight_05", $$7), 3),
+               Pair.of(eej.a("village/savanna/streets/straight_06", $$7), 4),
+               Pair.of(eej.a("village/savanna/streets/straight_08", $$7), 4),
+               Pair.of(eej.a("village/savanna/streets/straight_09", $$7), 4),
+               Pair.of(eej.a("village/savanna/streets/straight_10", $$7), 4),
+               Pair.of(eej.a("village/savanna/streets/straight_11", $$7), 4),
+               Pair.of(eej.a("village/savanna/streets/crossroad_02", $$7), 1),
+               Pair.of(eej.a("village/savanna/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(eej.a("village/savanna/streets/crossroad_04", $$7), 2),
+                  Pair.of(eej.a("village/savanna/streets/crossroad_05", $$7), 2),
+                  Pair.of(eej.a("village/savanna/streets/crossroad_06", $$7), 2),
+                  Pair.of(eej.a("village/savanna/streets/crossroad_07", $$7), 2),
+                  Pair.of(eej.a("village/savanna/streets/split_01", $$7), 2),
+                  Pair.of(eej.a("village/savanna/streets/split_02", $$7), 2),
+                  Pair.of(eej.a("village/savanna/streets/turn_01", $$7), 3)
+               }
+            ),
+            eel.a.a
+         )
+      );
+      ps.a(
+         $$0,
+         "village/savanna/zombie/streets",
+         new eel(
+            $$12,
+            ImmutableList.of(
+               Pair.of(eej.a("village/savanna/zombie/streets/corner_01", $$7), 2),
+               Pair.of(eej.a("village/savanna/zombie/streets/corner_03", $$7), 2),
+               Pair.of(eej.a("village/savanna/zombie/streets/straight_02", $$7), 4),
+               Pair.of(eej.a("village/savanna/zombie/streets/straight_04", $$7), 7),
+               Pair.of(eej.a("village/savanna/zombie/streets/straight_05", $$7), 3),
+               Pair.of(eej.a("village/savanna/zombie/streets/straight_06", $$7), 4),
+               Pair.of(eej.a("village/savanna/zombie/streets/straight_08", $$7), 4),
+               Pair.of(eej.a("village/savanna/zombie/streets/straight_09", $$7), 4),
+               Pair.of(eej.a("village/savanna/zombie/streets/straight_10", $$7), 4),
+               Pair.of(eej.a("village/savanna/zombie/streets/straight_11", $$7), 4),
+               Pair.of(eej.a("village/savanna/zombie/streets/crossroad_02", $$7), 1),
+               Pair.of(eej.a("village/savanna/zombie/streets/crossroad_03", $$7), 2),
+               new Pair[]{
+                  Pair.of(eej.a("village/savanna/zombie/streets/crossroad_04", $$7), 2),
+                  Pair.of(eej.a("village/savanna/zombie/streets/crossroad_05", $$7), 2),
+                  Pair.of(eej.a("village/savanna/zombie/streets/crossroad_06", $$7), 2),
+                  Pair.of(eej.a("village/savanna/zombie/streets/crossroad_07", $$7), 2),
+                  Pair.of(eej.a("village/savanna/zombie/streets/split_01", $$7), 2),
+                  Pair.of(eej.a("village/savanna/zombie/streets/split_02", $$7), 2),
+                  Pair.of(eej.a("village/savanna/zombie/streets/turn_01", $$7), 3)
+               }
+            ),
+            eel.a.a
+         )
+      );
+      ps.a(
+         $$0,
+         "village/savanna/houses",
+         new eel(
+            $$11,
+            ImmutableList.of(
+               Pair.of(eej.a("village/savanna/houses/savanna_small_house_1"), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_small_house_2"), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_small_house_3"), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_small_house_4"), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_small_house_5"), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_small_house_6"), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_small_house_7"), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_small_house_8"), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_medium_house_1"), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_medium_house_2"), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_butchers_shop_1"), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_butchers_shop_2"), 2),
+               new Pair[]{
+                  Pair.of(eej.a("village/savanna/houses/savanna_tool_smith_1"), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_fletcher_house_1"), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_shepherd_1"), 7),
+                  Pair.of(eej.a("village/savanna/houses/savanna_armorer_1"), 1),
+                  Pair.of(eej.a("village/savanna/houses/savanna_fisher_cottage_1"), 3),
+                  Pair.of(eej.a("village/savanna/houses/savanna_tannery_1"), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_cartographer_1"), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_library_1"), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_mason_1"), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_weaponsmith_1"), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_weaponsmith_2"), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_temple_1"), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_temple_2"), 3),
+                  Pair.of(eej.a("village/savanna/houses/savanna_large_farm_1", $$8), 4),
+                  Pair.of(eej.a("village/savanna/houses/savanna_large_farm_2", $$8), 6),
+                  Pair.of(eej.a("village/savanna/houses/savanna_small_farm", $$8), 4),
+                  Pair.of(eej.a("village/savanna/houses/savanna_animal_pen_1"), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_animal_pen_2"), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_animal_pen_3"), 2),
+                  Pair.of(eej.g(), 5)
+               }
+            ),
+            eel.a.b
+         )
+      );
+      ps.a(
+         $$0,
+         "village/savanna/zombie/houses",
+         new eel(
+            $$12,
+            ImmutableList.of(
+               Pair.of(eej.a("village/savanna/zombie/houses/savanna_small_house_1", $$6), 2),
+               Pair.of(eej.a("village/savanna/zombie/houses/savanna_small_house_2", $$6), 2),
+               Pair.of(eej.a("village/savanna/zombie/houses/savanna_small_house_3", $$6), 2),
+               Pair.of(eej.a("village/savanna/zombie/houses/savanna_small_house_4", $$6), 2),
+               Pair.of(eej.a("village/savanna/zombie/houses/savanna_small_house_5", $$6), 2),
+               Pair.of(eej.a("village/savanna/zombie/houses/savanna_small_house_6", $$6), 2),
+               Pair.of(eej.a("village/savanna/zombie/houses/savanna_small_house_7", $$6), 2),
+               Pair.of(eej.a("village/savanna/zombie/houses/savanna_small_house_8", $$6), 2),
+               Pair.of(eej.a("village/savanna/zombie/houses/savanna_medium_house_1", $$6), 2),
+               Pair.of(eej.a("village/savanna/zombie/houses/savanna_medium_house_2", $$6), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_butchers_shop_1", $$6), 2),
+               Pair.of(eej.a("village/savanna/houses/savanna_butchers_shop_2", $$6), 2),
+               new Pair[]{
+                  Pair.of(eej.a("village/savanna/houses/savanna_tool_smith_1", $$6), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_fletcher_house_1", $$6), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_shepherd_1", $$6), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_armorer_1", $$6), 1),
+                  Pair.of(eej.a("village/savanna/houses/savanna_fisher_cottage_1", $$6), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_tannery_1", $$6), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_cartographer_1", $$6), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_library_1", $$6), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_mason_1", $$6), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_weaponsmith_1", $$6), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_weaponsmith_2", $$6), 2),
+                  Pair.of(eej.a("village/savanna/houses/savanna_temple_1", $$6), 1),
+                  Pair.of(eej.a("village/savanna/houses/savanna_temple_2", $$6), 3),
+                  Pair.of(eej.a("village/savanna/houses/savanna_large_farm_1", $$6), 4),
+                  Pair.of(eej.a("village/savanna/zombie/houses/savanna_large_farm_2", $$6), 4),
+                  Pair.of(eej.a("village/savanna/houses/savanna_small_farm", $$6), 4),
+                  Pair.of(eej.a("village/savanna/houses/savanna_animal_pen_1", $$6), 2),
+                  Pair.of(eej.a("village/savanna/zombie/houses/savanna_animal_pen_2", $$6), 2),
+                  Pair.of(eej.a("village/savanna/zombie/houses/savanna_animal_pen_3", $$6), 2),
+                  Pair.of(eej.g(), 5)
+               }
+            ),
+            eel.a.b
+         )
+      );
+      $$0.a(
+         b,
+         new eel(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eej.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(eej.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(eej.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(eej.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(eej.a("village/savanna/terminators/terminator_05", $$7), 1)
+            ),
+            eel.a.a
+         )
+      );
+      $$0.a(
+         c,
+         new eel(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eej.a("village/plains/terminators/terminator_01", $$7), 1),
+               Pair.of(eej.a("village/plains/terminators/terminator_02", $$7), 1),
+               Pair.of(eej.a("village/plains/terminators/terminator_03", $$7), 1),
+               Pair.of(eej.a("village/plains/terminators/terminator_04", $$7), 1),
+               Pair.of(eej.a("village/savanna/zombie/terminators/terminator_05", $$7), 1)
+            ),
+            eel.a.a
+         )
+      );
+      ps.a($$0, "village/savanna/trees", new eel($$10, ImmutableList.of(Pair.of(eej.a($$2), 1)), eel.a.b));
+      ps.a(
+         $$0,
+         "village/savanna/decor",
+         new eel(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eej.a("village/savanna/savanna_lamp_post_01"), 4),
+               Pair.of(eej.a($$2), 4),
+               Pair.of(eej.a($$3), 4),
+               Pair.of(eej.a($$4), 1),
+               Pair.of(eej.g(), 4)
+            ),
+            eel.a.b
+         )
+      );
+      ps.a(
+         $$0,
+         "village/savanna/zombie/decor",
+         new eel(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eej.a("village/savanna/savanna_lamp_post_01", $$6), 4),
+               Pair.of(eej.a($$2), 4),
+               Pair.of(eej.a($$3), 4),
+               Pair.of(eej.a($$4), 1),
+               Pair.of(eej.g(), 4)
+            ),
+            eel.a.b
+         )
+      );
+      ps.a(
+         $$0,
+         "village/savanna/villagers",
+         new eel(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eej.a("village/savanna/villagers/nitwit"), 1),
+               Pair.of(eej.a("village/savanna/villagers/baby"), 1),
+               Pair.of(eej.a("village/savanna/villagers/unemployed"), 10)
+            ),
+            eel.a.b
+         )
+      );
+      ps.a(
+         $$0,
+         "village/savanna/zombie/villagers",
+         new eel(
+            $$10,
+            ImmutableList.of(Pair.of(eej.a("village/savanna/zombie/villagers/nitwit"), 1), Pair.of(eej.a("village/savanna/zombie/villagers/unemployed"), 10)),
+            eel.a.b
+         )
+      );
    }
 }
