@@ -1,250 +1,107 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class px {
-   public static final ajb<edp> a = pq.a("village/taiga/town_centers");
-   private static final ajb<edp> b = pq.a("village/taiga/terminators");
+   public static edc.c a(ip<cxy> $$0, Map<bpr, edj> $$1, dsi.b $$2, edn $$3) {
+      return new edc.c($$0, $$1, $$2, $$3);
+   }
 
-   public static void a(pj<edp> $$0) {
-      im<ebk> $$1 = $$0.a(ki.aD);
-      il<ebk> $$2 = $$1.b(rg.h);
-      il<ebk> $$3 = $$1.b(rg.i);
-      il<ebk> $$4 = $$1.b(rg.e);
-      il<ebk> $$5 = $$1.b(rg.l);
-      il<ebk> $$6 = $$1.b(rg.m);
-      im<ege> $$7 = $$0.a(ki.aF);
-      il<ege> $$8 = $$7.b(pr.f);
-      il<ege> $$9 = $$7.b(pr.d);
-      il<ege> $$10 = $$7.b(pr.k);
-      il<ege> $$11 = $$7.b(pr.o);
-      im<edp> $$12 = $$0.a(ki.aH);
-      il<edp> $$13 = $$12.b(pq.a);
-      il<edp> $$14 = $$12.b(b);
+   private static edc.c a(ip<cxy> $$0, dsi.b $$1, edn $$2) {
+      return a($$0, Map.of(), $$1, $$2);
+   }
+
+   private static edc.c a(ip<cxy> $$0, edn $$1) {
+      return a($$0, Map.of(), dsi.b.e, $$1);
+   }
+
+   public static void a(pl<edc> $$0) {
+      im<cxy> $$1 = $$0.a(kj.au);
+      im<eel> $$2 = $$0.a(kj.aH);
       $$0.a(
-         a,
-         new edp(
-            $$13,
-            ImmutableList.of(
-               Pair.of(edn.a("village/taiga/town_centers/taiga_meeting_point_1", $$8), 49),
-               Pair.of(edn.a("village/taiga/town_centers/taiga_meeting_point_2", $$8), 49),
-               Pair.of(edn.a("village/taiga/zombie/town_centers/taiga_meeting_point_1", $$9), 1),
-               Pair.of(edn.a("village/taiga/zombie/town_centers/taiga_meeting_point_2", $$9), 1)
-            ),
-            edp.a.b
+         ecw.a,
+         new efc(
+            a($$1.b(aum.y), Map.of(bpr.a, new edj(edj.a.b, blq.a(new cyk.c(bpc.aB, 1, 1, 1)))), dsi.b.e, edn.c), $$2.b(pq.a), 7, ebi.a(dtg.a(0)), true, dsm.a.a
          )
       );
-      pq.a(
-         $$0,
-         "village/taiga/streets",
-         new edp(
-            $$14,
-            ImmutableList.of(
-               Pair.of(edn.a("village/taiga/streets/corner_01", $$10), 2),
-               Pair.of(edn.a("village/taiga/streets/corner_02", $$10), 2),
-               Pair.of(edn.a("village/taiga/streets/corner_03", $$10), 2),
-               Pair.of(edn.a("village/taiga/streets/straight_01", $$10), 4),
-               Pair.of(edn.a("village/taiga/streets/straight_02", $$10), 4),
-               Pair.of(edn.a("village/taiga/streets/straight_03", $$10), 4),
-               Pair.of(edn.a("village/taiga/streets/straight_04", $$10), 7),
-               Pair.of(edn.a("village/taiga/streets/straight_05", $$10), 7),
-               Pair.of(edn.a("village/taiga/streets/straight_06", $$10), 4),
-               Pair.of(edn.a("village/taiga/streets/crossroad_01", $$10), 1),
-               Pair.of(edn.a("village/taiga/streets/crossroad_02", $$10), 1),
-               Pair.of(edn.a("village/taiga/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(edn.a("village/taiga/streets/crossroad_04", $$10), 2),
-                  Pair.of(edn.a("village/taiga/streets/crossroad_05", $$10), 2),
-                  Pair.of(edn.a("village/taiga/streets/crossroad_06", $$10), 2),
-                  Pair.of(edn.a("village/taiga/streets/turn_01", $$10), 3)
-               }
-            ),
-            edp.a.a
-         )
-      );
-      pq.a(
-         $$0,
-         "village/taiga/zombie/streets",
-         new edp(
-            $$14,
-            ImmutableList.of(
-               Pair.of(edn.a("village/taiga/zombie/streets/corner_01", $$10), 2),
-               Pair.of(edn.a("village/taiga/zombie/streets/corner_02", $$10), 2),
-               Pair.of(edn.a("village/taiga/zombie/streets/corner_03", $$10), 2),
-               Pair.of(edn.a("village/taiga/zombie/streets/straight_01", $$10), 4),
-               Pair.of(edn.a("village/taiga/zombie/streets/straight_02", $$10), 4),
-               Pair.of(edn.a("village/taiga/zombie/streets/straight_03", $$10), 4),
-               Pair.of(edn.a("village/taiga/zombie/streets/straight_04", $$10), 7),
-               Pair.of(edn.a("village/taiga/zombie/streets/straight_05", $$10), 7),
-               Pair.of(edn.a("village/taiga/zombie/streets/straight_06", $$10), 4),
-               Pair.of(edn.a("village/taiga/zombie/streets/crossroad_01", $$10), 1),
-               Pair.of(edn.a("village/taiga/zombie/streets/crossroad_02", $$10), 1),
-               Pair.of(edn.a("village/taiga/zombie/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(edn.a("village/taiga/zombie/streets/crossroad_04", $$10), 2),
-                  Pair.of(edn.a("village/taiga/zombie/streets/crossroad_05", $$10), 2),
-                  Pair.of(edn.a("village/taiga/zombie/streets/crossroad_06", $$10), 2),
-                  Pair.of(edn.a("village/taiga/zombie/streets/turn_01", $$10), 3)
-               }
-            ),
-            edp.a.a
-         )
-      );
-      pq.a(
-         $$0,
-         "village/taiga/houses",
-         new edp(
-            $$14,
-            ImmutableList.of(
-               Pair.of(edn.a("village/taiga/houses/taiga_small_house_1", $$8), 4),
-               Pair.of(edn.a("village/taiga/houses/taiga_small_house_2", $$8), 4),
-               Pair.of(edn.a("village/taiga/houses/taiga_small_house_3", $$8), 4),
-               Pair.of(edn.a("village/taiga/houses/taiga_small_house_4", $$8), 4),
-               Pair.of(edn.a("village/taiga/houses/taiga_small_house_5", $$8), 4),
-               Pair.of(edn.a("village/taiga/houses/taiga_medium_house_1", $$8), 2),
-               Pair.of(edn.a("village/taiga/houses/taiga_medium_house_2", $$8), 2),
-               Pair.of(edn.a("village/taiga/houses/taiga_medium_house_3", $$8), 2),
-               Pair.of(edn.a("village/taiga/houses/taiga_medium_house_4", $$8), 2),
-               Pair.of(edn.a("village/taiga/houses/taiga_butcher_shop_1", $$8), 2),
-               Pair.of(edn.a("village/taiga/houses/taiga_tool_smith_1", $$8), 2),
-               Pair.of(edn.a("village/taiga/houses/taiga_fletcher_house_1", $$8), 2),
-               new Pair[]{
-                  Pair.of(edn.a("village/taiga/houses/taiga_shepherds_house_1", $$8), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_armorer_house_1", $$8), 1),
-                  Pair.of(edn.a("village/taiga/houses/taiga_armorer_2", $$8), 1),
-                  Pair.of(edn.a("village/taiga/houses/taiga_fisher_cottage_1", $$8), 3),
-                  Pair.of(edn.a("village/taiga/houses/taiga_tannery_1", $$8), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_cartographer_house_1", $$8), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_library_1", $$8), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_masons_house_1", $$8), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_weaponsmith_1", $$8), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_weaponsmith_2", $$8), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_temple_1", $$8), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_large_farm_1", $$11), 6),
-                  Pair.of(edn.a("village/taiga/houses/taiga_large_farm_2", $$11), 6),
-                  Pair.of(edn.a("village/taiga/houses/taiga_small_farm_1", $$8), 1),
-                  Pair.of(edn.a("village/taiga/houses/taiga_animal_pen_1", $$8), 2),
-                  Pair.of(edn.g(), 6)
-               }
-            ),
-            edp.a.b
-         )
-      );
-      pq.a(
-         $$0,
-         "village/taiga/zombie/houses",
-         new edp(
-            $$14,
-            ImmutableList.of(
-               Pair.of(edn.a("village/taiga/zombie/houses/taiga_small_house_1", $$9), 4),
-               Pair.of(edn.a("village/taiga/zombie/houses/taiga_small_house_2", $$9), 4),
-               Pair.of(edn.a("village/taiga/zombie/houses/taiga_small_house_3", $$9), 4),
-               Pair.of(edn.a("village/taiga/zombie/houses/taiga_small_house_4", $$9), 4),
-               Pair.of(edn.a("village/taiga/zombie/houses/taiga_small_house_5", $$9), 4),
-               Pair.of(edn.a("village/taiga/zombie/houses/taiga_medium_house_1", $$9), 2),
-               Pair.of(edn.a("village/taiga/zombie/houses/taiga_medium_house_2", $$9), 2),
-               Pair.of(edn.a("village/taiga/zombie/houses/taiga_medium_house_3", $$9), 2),
-               Pair.of(edn.a("village/taiga/zombie/houses/taiga_medium_house_4", $$9), 2),
-               Pair.of(edn.a("village/taiga/houses/taiga_butcher_shop_1", $$9), 2),
-               Pair.of(edn.a("village/taiga/zombie/houses/taiga_tool_smith_1", $$9), 2),
-               Pair.of(edn.a("village/taiga/houses/taiga_fletcher_house_1", $$9), 2),
-               new Pair[]{
-                  Pair.of(edn.a("village/taiga/zombie/houses/taiga_shepherds_house_1", $$9), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_armorer_house_1", $$9), 1),
-                  Pair.of(edn.a("village/taiga/zombie/houses/taiga_fisher_cottage_1", $$9), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_tannery_1", $$9), 2),
-                  Pair.of(edn.a("village/taiga/zombie/houses/taiga_cartographer_house_1", $$9), 2),
-                  Pair.of(edn.a("village/taiga/zombie/houses/taiga_library_1", $$9), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_masons_house_1", $$9), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_weaponsmith_1", $$9), 2),
-                  Pair.of(edn.a("village/taiga/zombie/houses/taiga_weaponsmith_2", $$9), 2),
-                  Pair.of(edn.a("village/taiga/zombie/houses/taiga_temple_1", $$9), 2),
-                  Pair.of(edn.a("village/taiga/houses/taiga_large_farm_1", $$9), 6),
-                  Pair.of(edn.a("village/taiga/zombie/houses/taiga_large_farm_2", $$9), 6),
-                  Pair.of(edn.a("village/taiga/houses/taiga_small_farm_1", $$9), 1),
-                  Pair.of(edn.a("village/taiga/houses/taiga_animal_pen_1", $$9), 2),
-                  Pair.of(edn.g(), 6)
-               }
-            ),
-            edp.a.b
-         )
-      );
+      $$0.a(ecw.b, new efg(a($$1.b(aum.t), dsi.b.d, edn.a), efg.a.a));
+      $$0.a(ecw.c, new efg(a($$1.b(aum.u), dsi.b.d, edn.a), efg.a.b));
+      $$0.a(ecw.d, new efy(a($$1.b(aum.Q), edn.a)));
+      $$0.a(ecw.e, new efe(a($$1.b(aum.s), edn.a)));
+      $$0.a(ecw.f, new eex(a($$1.b(aum.q), edn.a)));
+      $$0.a(ecw.g, new efb(a($$1.b(aum.r), edn.a)));
+      $$0.a(ecw.h, new efs(a($$1.b(aum.G), edn.a), false));
+      $$0.a(ecw.i, new efs(a($$1.b(aum.F), edn.a), true));
       $$0.a(
-         b,
-         new edp(
-            $$13,
-            ImmutableList.of(
-               Pair.of(edn.a("village/plains/terminators/terminator_01", $$10), 1),
-               Pair.of(edn.a("village/plains/terminators/terminator_02", $$10), 1),
-               Pair.of(edn.a("village/plains/terminators/terminator_03", $$10), 1),
-               Pair.of(edn.a("village/plains/terminators/terminator_04", $$10), 1)
-            ),
-            edp.a.a
+         ecw.j,
+         new efw(
+            a(
+               $$1.b(aum.J),
+               Map.of(bpr.a, new edj(edj.a.a, blq.a(new cyk.c(bpc.bn, 1, 1, 1))), bpr.b, new edj(edj.a.a, blq.a(new cyk.c(bpc.p, 1, 1, 1)))),
+               dsi.b.e,
+               edn.a
+            )
          )
       );
-      pq.a(
-         $$0,
-         "village/taiga/decor",
-         new edp(
-            $$13,
-            ImmutableList.of(
-               Pair.of(edn.a("village/taiga/taiga_lamp_post_1"), 10),
-               Pair.of(edn.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(edn.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(edn.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(edn.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(edn.a("village/taiga/taiga_decoration_5"), 2),
-               Pair.of(edn.a("village/taiga/taiga_decoration_6"), 1),
-               Pair.of(edn.a($$2), 4),
-               Pair.of(edn.a($$3), 4),
-               Pair.of(edn.a($$4), 2),
-               Pair.of(edn.a($$5), 4),
-               Pair.of(edn.a($$6), 1),
-               new Pair[]{Pair.of(edn.g(), 4)}
-            ),
-            edp.a.b
+      $$0.a(ecw.k, new efu(a($$1.b(aum.H), edn.b)));
+      $$0.a(
+         ecw.l,
+         new efm(
+            a(
+               $$1.b(aum.v),
+               Map.of(bpr.a, new edj(edj.a.b, blq.a(new cyk.c(bpc.Y, 1, 2, 4))), bpr.e, new edj(edj.a.b, cyk.a), bpr.d, new edj(edj.a.b, cyk.a)),
+               dsi.b.e,
+               edn.a
+            )
          )
       );
-      pq.a(
-         $$0,
-         "village/taiga/zombie/decor",
-         new edp(
-            $$13,
-            ImmutableList.of(
-               Pair.of(edn.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(edn.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(edn.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(edn.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(edn.a($$2), 4),
-               Pair.of(edn.a($$3), 4),
-               Pair.of(edn.a($$4), 2),
-               Pair.of(edn.a($$5), 4),
-               Pair.of(edn.a($$6), 1),
-               Pair.of(edn.g(), 4)
-            ),
-            edp.a.b
+      $$0.a(ecw.m, new efo(a($$1.b(aum.w), edn.a), efo.a.b, 0.3F, 0.9F));
+      $$0.a(ecw.n, new efo(a($$1.b(aum.x), edn.a), efo.a.a, 0.3F, 0.9F));
+      $$0.a(ecw.o, new efi(a($$1.b(aum.R), Map.of(bpr.a, new edj(edj.a.a, efi.d)), dsi.b.h, edn.a)));
+      $$0.a(ecw.p, new efk(a($$1.b(aum.S), dsi.b.h, edn.c), ebm.a(dtg.a(32), dtg.c(2))));
+      $$0.a(ecw.q, new eez(a($$1.b(aum.W), edn.a)));
+      $$0.a(ecw.r, new eev(a($$1.b(aum.p), dsi.b.d, edn.a)));
+      $$0.a(ecw.s, new efc(a($$1.b(aum.T), edn.a), $$2.b(ph.a), 6, ebi.a(dtg.a(33)), false));
+      $$0.a(ecw.t, new efc(a($$1.b(aum.L), edn.c), $$2.b(pr.a), 6, ebi.a(dtg.a(0)), true, dsm.a.a));
+      $$0.a(ecw.u, new efc(a($$1.b(aum.K), edn.c), $$2.b(pn.a), 6, ebi.a(dtg.a(0)), true, dsm.a.a));
+      $$0.a(ecw.v, new efc(a($$1.b(aum.M), edn.c), $$2.b(pu.a), 6, ebi.a(dtg.a(0)), true, dsm.a.a));
+      $$0.a(ecw.w, new efc(a($$1.b(aum.N), edn.c), $$2.b(pv.a), 6, ebi.a(dtg.a(0)), true, dsm.a.a));
+      $$0.a(ecw.x, new efc(a($$1.b(aum.O), edn.c), $$2.b(pz.a), 6, ebi.a(dtg.a(0)), true, dsm.a.a));
+      $$0.a(
+         ecw.y,
+         new efq(
+            a($$1.b(aum.E), edn.a),
+            List.of(new efq.a(efp.b.e, 1.0F, 0.2F, false, false, true, false, 0.5F), new efq.a(efp.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
          )
       );
-      pq.a(
-         $$0,
-         "village/taiga/villagers",
-         new edp(
-            $$13,
-            ImmutableList.of(
-               Pair.of(edn.a("village/taiga/villagers/nitwit"), 1),
-               Pair.of(edn.a("village/taiga/villagers/baby"), 1),
-               Pair.of(edn.a("village/taiga/villagers/unemployed"), 10)
-            ),
-            edp.a.b
+      $$0.a(ecw.z, new efq(a($$1.b(aum.z), edn.a), new efq.a(efp.b.b, 0.0F, 0.0F, false, false, false, false, 1.0F)));
+      $$0.a(ecw.A, new efq(a($$1.b(aum.A), edn.a), new efq.a(efp.b.a, 0.5F, 0.8F, true, true, false, false, 1.0F)));
+      $$0.a(ecw.B, new efq(a($$1.b(aum.C), edn.a), new efq.a(efp.b.c, 0.0F, 0.5F, false, true, false, false, 1.0F)));
+      $$0.a(
+         ecw.C,
+         new efq(
+            a($$1.b(aum.D), edn.a),
+            List.of(new efq.a(efp.b.d, 1.0F, 0.2F, false, false, true, false, 0.5F), new efq.a(efp.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
          )
       );
-      pq.a(
-         $$0,
-         "village/taiga/zombie/villagers",
-         new edp(
-            $$13,
-            ImmutableList.of(Pair.of(edn.a("village/taiga/zombie/villagers/nitwit"), 1), Pair.of(edn.a("village/taiga/zombie/villagers/unemployed"), 10)),
-            edp.a.b
+      $$0.a(ecw.D, new efq(a($$1.b(aum.B), edn.a), new efq.a(efp.b.c, 0.0F, 0.8F, false, false, true, false, 1.0F)));
+      $$0.a(ecw.E, new efq(a($$1.b(aum.V), edn.a), new efq.a(efp.b.f, 0.5F, 0.0F, false, false, false, true, 1.0F)));
+      $$0.a(
+         ecw.F,
+         new efc(
+            a($$1.b(aum.U), Arrays.stream(bpr.values()).collect(Collectors.toMap($$0x -> $$0x, $$0x -> new edj(edj.a.b, blq.c()))), dsi.b.h, edn.d),
+            $$2.b(pc.a),
+            Optional.of(new ajh("city_anchor")),
+            7,
+            ebi.a(dtg.a(-27)),
+            false,
+            Optional.empty(),
+            116,
+            List.of()
          )
       );
+      $$0.a(ecw.G, new efc(a($$1.b(aum.P), Map.of(), dsi.b.d, edn.b), $$2.b(qb.a), 7, ebi.a(dtg.a(-15)), false, dsm.a.a));
    }
 }
