@@ -1,55 +1,17 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class qp {
-   public static final ajb<duh<?, ?>> a = qo.a("ice_spike");
-   public static final ajb<duh<?, ?>> b = qo.a("ice_patch");
-   public static final ajb<duh<?, ?>> c = qo.a("forest_rock");
-   public static final ajb<duh<?, ?>> d = qo.a("iceberg_packed");
-   public static final ajb<duh<?, ?>> e = qo.a("iceberg_blue");
-   public static final ajb<duh<?, ?>> f = qo.a("blue_ice");
-   public static final ajb<duh<?, ?>> g = qo.a("lake_lava");
-   public static final ajb<duh<?, ?>> h = qo.a("disk_clay");
-   public static final ajb<duh<?, ?>> i = qo.a("disk_gravel");
-   public static final ajb<duh<?, ?>> j = qo.a("disk_sand");
-   public static final ajb<duh<?, ?>> k = qo.a("freeze_top_layer");
-   public static final ajb<duh<?, ?>> l = qo.a("disk_grass");
-   public static final ajb<duh<?, ?>> m = qo.a("bonus_chest");
-   public static final ajb<duh<?, ?>> n = qo.a("void_start_platform");
-   public static final ajb<duh<?, ?>> o = qo.a("desert_well");
-   public static final ajb<duh<?, ?>> p = qo.a("spring_lava_overworld");
-   public static final ajb<duh<?, ?>> q = qo.a("spring_lava_frozen");
-   public static final ajb<duh<?, ?>> r = qo.a("spring_water");
+   public static final ajg<dvd<?, ?>> a = qq.a("end_spike");
+   public static final ajg<dvd<?, ?>> b = qq.a("end_gateway_return");
+   public static final ajg<dvd<?, ?>> c = qq.a("end_gateway_delayed");
+   public static final ajg<dvd<?, ?>> d = qq.a("chorus_plant");
+   public static final ajg<dvd<?, ?>> e = qq.a("end_island");
 
-   public static void a(pj<duh<?, ?>> $$0) {
-      qo.a($$0, a, duu.s);
-      qo.a($$0, b, duu.G, new dwv(dzh.a(czh.iC), dsx.c(List.of(czh.j, czh.i, czh.l, czh.k, czh.fl, czh.dP, czh.dO)), blw.a(2, 3), 1));
-      qo.a($$0, c, duu.F, new dwr(czh.cn.o()));
-      qo.a($$0, d, duu.E, new dwr(czh.iC.o()));
-      qo.a($$0, e, duu.E, new dwr(czh.mW.o()));
-      qo.a($$0, f, duu.D);
-      qo.a($$0, g, duu.H, new dvj.a(dyz.a(czh.H.o()), dyz.a(czh.b.o())));
-      qo.a($$0, h, duu.G, new dwv(dzh.a(czh.dR), dsx.c(List.of(czh.j, czh.dR)), blw.a(2, 3), 1));
-      qo.a($$0, i, duu.G, new dwv(dzh.a(czh.L), dsx.c(List.of(czh.j, czh.i)), blw.a(2, 5), 2));
-      qo.a(
-         $$0, j, duu.G, new dwv(new dzh(dyz.a(czh.I), List.of(new dzh.a(dsx.a(ih.a.q(), czh.a), dyz.a(czh.aV)))), dsx.c(List.of(czh.j, czh.i)), blw.a(2, 6), 2)
-      );
-      qo.a($$0, k, duu.u);
-      qo.a(
-         $$0,
-         l,
-         duu.G,
-         new dwv(
-            new dzh(dyz.a(czh.j), List.of(new dzh.a(dsx.a(dsx.b(dsx.b(ih.b.q()), dsx.a(ih.b.q(), ehs.c))), dyz.a(czh.i)))),
-            dsx.c(List.of(czh.j, czh.sI)),
-            blw.a(2, 6),
-            2
-         )
-      );
-      qo.a($$0, m, duu.ac);
-      qo.a($$0, n, duu.n);
-      qo.a($$0, o, duu.o);
-      qo.a($$0, p, duu.k, new dxt(ehs.e.g(), true, 4, 1, ip.a(czf::r, czh.b, czh.c, czh.e, czh.g, czh.sJ, czh.qz, czh.qN, czh.j)));
-      qo.a($$0, q, duu.k, new dxt(ehs.e.g(), true, 4, 1, ip.a(czf::r, czh.dP, czh.qP, czh.iC)));
-      qo.a($$0, r, duu.k, new dxt(ehs.c.g(), true, 4, 1, ip.a(czf::r, czh.b, czh.c, czh.e, czh.g, czh.sJ, czh.qz, czh.qN, czh.j, czh.dP, czh.qP, czh.iC)));
+   public static void a(pl<dvd<?, ?>> $$0) {
+      qq.a($$0, a, dvq.J, new dyo(false, ImmutableList.of(), null));
+      qq.a($$0, b, dvq.L, dxt.a(apf.a, true));
+      qq.a($$0, c, dvq.L, dxt.a());
+      qq.a($$0, d, dvq.l);
+      qq.a($$0, e, dvq.K);
    }
 }
